--		table headerCollapsedTitle				table or function returning a table of signature { text = "Click to search", color=ZO_ColorDef, font="FontNameHere", align=LEFT|CENTER(default)|RIGHT, offSetX=12, offSetY=-12 }: Title text shown as the header is collapsed (e.g. a text to show you can expand the section and see the search). Default value is nil.


-v- ---------------LSM v2.39 - 2025-12-09--------------------------------------------------------------------------- -v-
[Fixed]
#2025_62 headerCollapsed is not working and making the search header always collapsed on open (it still uses last used state as it seems)

-v- ---------------LSM v2.38 - 2025-11-14--------------------------------------------------------------------------- -v-
[WORKING ON]

[Fixed]
#2025_46 Clicking a disabled entry at a contextmenu submenu will close the submenu as the control is not mouseEnabled and the scrollList control below is clicked. Detection of the scrollList's owner == LSM menu should take place then to suppress the close of the menu?
#2025_47 Clicking a scrollbar at a contextmenu (submenu) will close the contextmenu (submenu)
#2025_48 Search header is not searching an editBox's text or a slider's value (only the label's text in front)
#2025_49 Editbox clicked at context menu's submenu will close the contextmenu
#2025_50 Slider  clicked at context menu's submenu will close the contextmenu
#2025_51 MultiIcon clicked at context menu's submenu will close the contextmenu
#2025_52 Checkbox [ ] part clicked in a submenu closes the submenu
#2025_53 Checkbox label or [ ] part clicked in a contextmenu's submenu closes the submenu
#2025_54 Radiobutton label or [ ] part clicked in a contextmenu's submenu closes the submenu
#2025_55 Radiobutton [ ] part clicked in a contextmenu's submenu raises a lua error user:/AddOns/LibScrollableMenu/classes/buttonGroup_class.lua:171: attempt to index a nil value

[Added]